# lexigram

./: .gitignore  Cargo.toml  README.md  RELEASES.md  TODO.md
.github/workflows/: rust.yml
build-lexigram/: Cargo.toml
build-lexigram/src/: lib.rs
build-lexigram/src/build_gram/: build_gramlexer.rs  build_gramparser.rs  gram_lexicon.l  mod.rs
build-lexigram/src/build_lexi/: build_lexilexer.rs  build_lexiparser.rs  mod.rs
build-rtsgen/: Cargo.toml
build-rtsgen/src/: lib.rs  rtsgen.g  rtsgen.l
build-stage1/: Cargo.toml
build-stage1/src/: lib.rs
build-stage1/src/build_gram/: build_gramlexer.rs  build_gramparser.rs  gram_grammar.g  gram_lexicon.l  mod.rs
build-stage1/src/build_lexi/: build_lexilexer.rs  build_lexiparser.rs  lexi_grammar.g  lexi_lexicon.l  mod.rs
build-stage2/: Cargo.toml
build-stage2/src/: lib.rs
build-stage2/src/build_gram/: build_gramlexer.rs  build_gramparser.rs  mod.rs
build-stage2/src/build_lexi/: build_lexilexer.rs  build_lexiparser.rs  mod.rs
data/test/: wrapper_source.out.rs
doc/: Overview.drawio  gram.md  lexer.md  lexi.md  ops.xlsx  prs_ops.md  prs_ops.txt  remove_recursion.txt
examples/: gen_microcalc.rs  gen_rtsgen.rs  microcalc.g  microcalc.l  microcalc.rs  rtsgen.g  rtsgen.l  rtsgen.rs
examples/gen_microcalc/: Cargo.toml
examples/gen_microcalc/src/: lib.rs  main.rs  microcalc.g  microcalc.l  microcalc.lg
examples/gen_pandemonium/: Cargo.toml
examples/gen_pandemonium/src/: lib.rs  main.rs  pandemonium.g  pandemonium.l
examples/gen_terminate/: Cargo.toml
examples/gen_terminate/src/: lib.rs  terminate.lg
examples/gen_typedef/: Cargo.toml
examples/gen_typedef/src/: lib.rs  typedef.lg
examples/microcalc/: Cargo.toml
examples/microcalc/src/: main.rs
examples/pandemonium/: Cargo.toml
examples/pandemonium/src/: lib.rs  main.rs
examples/terminate/: Cargo.toml
examples/terminate/src/: lib.rs  terminate.rs
examples/typedef/: Cargo.toml
examples/typedef/src/: lib.rs  text_span.rs  typedef_id_type.rs  typedef_match.rs  typedef_type.rs
gram/: Cargo.toml
gram/src/: gram.rs  gramlexer.rs  gramparser.rs  lib.rs  listener.rs  tests.rs
lexi/: Cargo.toml
lexi-gram/: Cargo.toml  README.md
lexi-gram/data/: test1.g  test1.l
lexi-gram/src/: gen_parser.rs  lib.rs  options.rs  tests.rs
lexi-gram/src/gram/: gramlexer.rs  gramparser.rs  listener.rs  tests.rs
lexi-gram/src/lexi/: lexilexer.rs  lexiparser.rs  listener.rs  mod.rs  tests.rs
lexi-gram/tests/: mod.rs
lexi/src/: lexi.rs  lexilexer.rs  lexiparser.rs  lib.rs  listener.rs  tests.rs
lexigram/: Cargo.toml  README.md
lexigram-bin/: Cargo.toml
lexigram-bin/src/: arg_opt.rs  main.rs
lexigram-core/: Cargo.toml  README.md
lexigram-core/src/: alt.rs  char_reader.rs  fixed_sym_table.rs  lib.rs  log.rs  segmap.rs  text_span.rs
lexigram-core/src/lexer/: mod.rs  tests.rs
lexigram-core/src/parser/: mod.rs  tests.rs
lexigram/examples/: gen_microcalc.rs  gen_pandemonium.rs  microcalc.l  microcalc.rs  pandemonium.g  pandemonium.l  pandemonium.rs
lexigram/src/: arg_opt.rs  gen_parser.rs  lib.rs  main.rs  options.rs  tests.rs
lexigram/src/gram/: gramlexer.rs  gramparser.rs  listener.rs  mod.rs  tests.rs
lexigram/src/lexi/: lexilexer.rs  lexiparser.rs  listener.rs  mod.rs  tests.rs
make-gram/: Cargo.toml
make-gram/src/: build_gramlexer.rs  build_gramparser.rs  gram_grammar.g  lib.rs
make-lexi/: Cargo.toml
make-lexi/src/: build_lexilexer.rs  build_lexiparser.rs  grammar.g  lib.rs
rtsgen/: Cargo.toml
rtsgen/src/: gen_rtsgen.rs  lib.rs  rtsgen.l  rtsgen.rs  tests.rs
src/: build.rs  char_reader.rs  cproduct.rs  dfa.rs  file_utils.rs  fixed_sym_table.rs  intervals.rs  io.rs  lexgen.rs  lexigram_lexi.rs  lib.rs  log.rs  macros.rs  name_fixer.rs  segmap.rs  segments.rs  symbol_table.rs  take_until.rs  test_tools.rs  tests.rs  vectree.rs
src/dfa/: mod.rs  tests.rs
src/dfa/tests/: lexer.rs  mod.rs
src/grammar/: alt.rs  mod.rs  origin.rs  prs.rs  tests.rs
src/grammar/tests/: manually_built_rts_prs.rs  mod.rs  old_build_rts_prs.rs  prs.rs  rts.rs
src/lexer/: mod.rs  tests.rs
src/lexergen/: mod.rs  tests.rs
src/lexgen/: interpreter.rs  mod.rs  tests.rs
src/lexi/: mod.rs  tests.rs
src/parser/: mod.rs  tests.rs
src/parsergen/: mod.rs  tests.rs
src/regexgen/: gen.rs  mod.rs  tests.rs
src/rtsgen/: mod.rs  tests.rs
src/scan/: mod.rs  tests.rs
src/tests/: mod.rs  vectree.rs
src/vectree/: mod.rs  tests.rs
tests/: integration.rs  mod.rs
tests/integration/: main.rs  mod.rs  parser_examples.rs  parsergen.rs  wrappers.rs
tests/lexi/: basic_test.rs  lexicon.l  listener.rs  mod.rs  tests.rs
