[package]
name = "lexigram-lib"
version = "0.8.3"
description = "Full library of the lexigram lexer/parser generator"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/lexigram-lib"
readme = "README.md"
include = ["src/**/*", "Cargo.*", "README.md", "RELEASES.md", "LICENSE*"]

[features]
default = []

[dependencies]
lexigram-core = { path = "lexigram-core", version = "0.8.3" }
iter-index = "1.0.0"
vectree = "0.4.1"

[dev-dependencies]
lexigram-core = { path = "lexigram-core", features = ["test_utils"]  , version = "0.8.3" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(for_later, possible_alternative)'] }

[workspace]
members = [
    ".", "lexigram-core",
    "lexi-gram",
    "build-stage1", "build-stage2", "build-rtsgen",
    "lexigram",
    "examples/*"
]

# for publishing:
default-members = [
    ".", "lexigram-core",
    "lexi-gram",
    "lexigram"
]

# for testing: cargo test --workspace

[workspace.package]
edition = "2024"
rust-version = "1.85.1"
authors = ["Redglyph"]
categories = ["compilers", "development-tools::build-utils", "parsing"]
keywords = ["parser-generator", "lexer-generator", "parser", "lexer", "grammar"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/blueglyph/lexigram"
repository = "https://github.com/blueglyph/lexigram"
