[package]
name = "build-stage2"
version = "0.7.0"
edition = "2024"

[dependencies]
# use this dependency when modifications break back-compatibility in stage 2 (when stage 1 must
# rebuild stage 2 and lexi/gram with up-to-date generated sources):
#lexigram_lib = { git = "ssh://git@github.com/blueglyph/lexigram.git", tag = "0.7.0", package = "lexigram_lib" }

# use this dependency otherwise:
lexigram_lib = { path = "..", package = "lexigram_lib", version = "0.7.0" }
