[package]
name = "build-stage2"
version = "0.9.0"
edition = "2024"

[dependencies]
# use this dependency when modifications break back-compatibility in stage 2 (when stage 1 must
# rebuild stage 2 and lexi/gram with up-to-date generated sources):
#lexigram-lib = { git = "ssh://git@github.com/blueglyph/lexigram.git", tag = "0.8.3", package = "lexigram-lib" }

# use this dependency otherwise:
lexigram-lib = { path = "..", version = "0.9.0" }
