[package]
name = "lexi-gram"
version = "0.8.0"
description = "Lexi and Gram generators"
edition = "2024"
exclude = ["data", "tests"]

[dependencies]
#lexigram-lib = { git = "ssh://git@github.com/blueglyph/lexigram.git", tag = "0.8.0", package = "lexigram-lib" }
lexigram-lib = { path = "..", version = "0.8.0" }
iter-index = "1.0.0"
vectree = "0.2.3"
