[package]
name = "lexi-gram"
version = "0.9.0"
description = "Lexi and Gram lexer/parser generator top-level library that includes the lexicon/grammar parsers"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude = ["data", "tests"]
documentation = "https://docs.rs/lexi-gram"
readme = "README.md"

[dependencies]
#lexigram-lib = { git = "ssh://git@github.com/blueglyph/lexigram.git", tag = "0.8.3", package = "lexigram-lib" }
lexigram-lib = { path = "..", version = "0.9.0" }
iter-index = "1.0.0"
vectree = "0.4.1"

[lints]
workspace = true
