[package]
name = "lexigram-bin"
version = "0.8.0"
description = "Lexer and LL(1) parser generator"
edition = "2024"
rust-version = "1.85.1"
authors = ["Redglyph"]
categories = ["compilers", "development-tools::build-utils", "parsing"]
keywords = ["parser-generator", "lexer-generator", "parser", "lexer", "grammar"]
documentation = "https://docs.rs/lexigram-bin"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
lexigram = { path = "../lexigram", version = "0.8.0" }

[[bin]]
name = "lexigram"
path = "src/main.rs"
