[package]
name = "lexigram"
version = "0.8.0"
edition = "2024"

[dependencies]
#lexigram-core = { path = "../lexigram-core", version = "0.8.0" }
#lexigram_lib = { git = "ssh://git@github.com/blueglyph/lexigram.git", tag = "0.8.0", package = "lexigram_lib" }
lexigram_lib = { path = "..", package = "lexigram_lib", version = "0.8.0" }
iter-index = "1.0.0"
vectree = "0.2.3"
