[package]
name = "lexigram"
version = "0.8.1"
description = "Lexer and LL(1) parser generator"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/lexigram-bin"
readme = "README.md"

[dependencies]
lexi-gram = { path = "../lexi-gram", version = "0.8.1" }

[[bin]]
name = "lexigram"
path = "src/main.rs"
